# AndroCorn

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  README.md  TODO  TODO.md  fix.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
Config/: index.html
Examples/Files/: index.html
Examples/Initialization/: index.html
Help/Ghidra/: index.html
Help/Tools/: index.html
Java/Java Class Definer/: index.html
Java/Java Class Loader/: index.html
Java/Java Classes/: index.html
Java/Java Field Definer/: index.html
Java/Java Method Definer/: index.html
Memory/: index.html
Objects/: index.html
Virtual/Content Generator/: index.html
Virtual/Execve Work/: index.html
Virtual/File Table/: index.html
Virtual/Time Manager/: index.html
androidemu/: config.py  emulator.py  hooker.py  native_hook_utils.py  pcb.py  scheduler.py
androidemu/const/: android.py  devices.py  flags.py  linux.py  metatags.py  registers.py  templates.py
androidemu/cpu/: syscall_handlers.py  syscall_hooks.py
androidemu/data/: mem_map.py
androidemu/emu_cfg/: default.json  example.json
androidemu/handlers/: syscall.py
androidemu/highlevel/: libc.py
androidemu/internal/: elf_reader.py  linker.py  module.py  offset_cfg.py  relocator.py  soinfo.py
androidemu/java/: README.md  (+9 more)
docs/: Config.md  Memory.md  Objects.md  index.md
search/: search_index.json
tests/: README.md  test_elf.py  test_getprop.py  test_native.py  test_perror.py  test_printf.py  test_string_alloc.py  test_thread.py  test_urandom.py
tools/: gen_jni_env_map.py
vfs/: info.txt
(+154 files in other folders)
