[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "androidemu"
version = "2026.04.24"
description = "Android emulator for native library analysis and emulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lief==0.17.6",
    "unicorn==2.1.4"
]

[tool.setuptools.packages.find]
include = ["androidemu*"]